     calculated.. caused smaller allocations than should have been done.
     this caused corruption of the Xamine shared memory free list.
   - Improve performance of GUI parenting.
   - Mask gates were not checked in a 64 bit pure way.. sign extends could
     make the check incorrect.
   - Mask gate editor in gui - work around issue in early tcl 8.4
     where [string is integer] is false for e.g. 0x80000000
   - Address defect 213:  When a 1-d spectrum has counts > 0x80000000,
     with autoscaling turned on, it updating it/displaying it causes Xamine
     to crash.
     o Modify refreshctl.cc - Xamine_Refresh.. return from Xamine_ComputeScaling
       should be unsigned, and further more checking for it to go negative
       is stupid and should be removed.
     o dispwind.h - getceiling and get floor modified to return uint.
     o plot1d.cc  - Plot : base/max changed to be uint and propagated
                    into PlotLog, PlotLin (range as well in PlotLin?).
     o plot2d.cc  - DrawLogSegment, DrawSegment floor/ceil
                    vars -> uint.
     o axes.cc    - Ensure that counts axes are always + and that
                    mapped axes will be right for very large +/- values.
   - Side piece of defect 213... channel command is not rejecting large unsigned
     channel values e.g. 0x87654321.
   - Really get mask gates to work correctly.
   - Fix error in newGUI.tcl - if used with Scaler processing,
     run number could be non decimal (e.g. UNKNOWN).
   - Fix error in wysiwyg prints of zoomed panes.
   - Fix Y height error in plotting linear 1-d channels.. an off by 1 error only
     visible for a relatively small number of counts.
   - Enh 194 - print more precision in integration results.
   - Enh 205 - max the gui status line for tha attach so that it can't
     make the gui window very very wide.
   - Deal with the fact that treeview find is >very< slow on 64 bit systems
     in browser.tcl 

  Released September 21, 2006

3.1-003